--- a/HotelAPI/HotelAPI/appsettings.json
+++ b/HotelAPI/HotelAPI/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "HotelDBConnectionString": "data source=DESKTOP-B7GM7UV\\SQLEXPRESS; initial catalog=HotelDB; integrated security=true"
+    "HotelDBConnectionString": "data source=localhost; initial catalog=HotelDB; integrated security=true"
   },
   "AllowedHosts": "*"
 }
